maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:31: error: not found: value pickUpBaggle
  pickUpBaggle()
  ^